Added the title for the website below the nav links

--- a/index.html
+++ b/index.html
@@ -22,5 +22,8 @@
             <li><a href="#">Contact</a></li>
         </ul>
     </nav>
+    <div class="title">
+        <h1>Street Food</h1>
+    </div>
 </body>
 </html>
