--- a/index.html
+++ b/index.html
@@ -25,5 +25,8 @@
     <div class="title">
         <h1>Street Food</h1>
     </div>
+    <div class="top_img">
+        <img class="img1" src="./Images/Img1.jpg" alt="food">
+    </div>
 </body>
 </html>
