--- a/index.html
+++ b/index.html
@@ -28,5 +28,10 @@
     <div class="top_img">
         <img class="img1" src="./Images/Img1.jpg" alt="food">
     </div>
+    <div class="food_title">
+        <h1><span class="street">Street</span> <spa class="food">Food</spa></h1>
+        <img class="img1" src="./Images/Img2.jpg" alt="food">
+        <img class="img3" src="./Images/Img3.jpg" alt="food">
+    </div>
 </body>
 </html>
