--- a/index.html
+++ b/index.html
@@ -33,5 +33,17 @@
         <img class="img2" src="./Images/Img2.jpg" alt="food">
         <img class="img3" src="./Images/Img3.jpg" alt="food">
     </div>
+    <div class="food_info">
+        <div>
+            <h2>We don't play with food</h2>
+            <p>When I was a small boy, my father told me never to recommend a church or a woman to 
+                anyone. And I have found it wise never to recommend a restuarant either. Something
+            always goes wrong with the cheese soufffle</p>
+        </div>
+        <div>
+            <img src="./Images/Img4.jpg" alt="food">
+            <img src="./Images/Img5.jpg" alt="food">
+        </div>
+    </div>
 </body>
 </html>
