Aligned the images and the text horizontally to achieve the intended design

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
     <div class="food_info">
         <div>
             <h2>We don't play with food</h2>
-            <p>When I was a small boy, my father told me never to recommend a church or a woman to 
+            <h5 class="text">When I was a small boy, my father told me never to recommend a church or a woman to 
                 anyone. And I have found it wise never to recommend a restuarant either. Something
-            always goes wrong with the cheese soufffle</p>
+            always goes wrong with the cheese soufffle.</h5>
         </div>
-        <div>
-            <img src="./Images/Img4.jpg" alt="food">
-            <img src="./Images/Img5.jpg" alt="food">
+        <div class="img_container">
+            <img class="img4" src="./Images/Img4.jpg" alt="food">
+            <img class="img5" src="./Images/Img5.jpg" alt="food">
         </div>
     </div>
 </body>
