Added a button element

--- a/index.html
+++ b/index.html
@@ -47,5 +47,6 @@
             <img class="img5" src="./Images/Img5.jpg" alt="food">
         </div>
     </div>
+    <button class="btn">Order Now</button>
 </body>
 </html>
