--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Street Food</title>
 </head>
 <body>
+    <div class="circle"></div>
     <nav>
         <ul>
             <li><a href="#">Home</a></li>
@@ -26,12 +27,12 @@
         <h2>Street Food</h2>
     </div>
     <div class="top_img">
-        <img class="img1" src="./Images/Img1.jpg" alt="food">
+        <img class="img1" src="./Assets/img1.png" alt="food">
     </div>
     <div class="food_title">
         <h1><span class="street">Street</span> <spa class="food">Food</spa></h1>
-        <img class="img2" src="./Images/Img2.jpg" alt="food">
-        <img class="img3" src="./Images/Img3.jpg" alt="food">
+        <img class="img2" src="./Assets/image 2.png" alt="food">
+        <img class="img3" src="./Assets/img3.png" alt="food">
     </div>
     <div class="food_info">
         <div>
@@ -42,9 +43,9 @@
         </h5>
         </div>
         <div class="img_container">
-            <img class="img4" src="./Images/Img4.jpg" alt="food">
-            <img class="img6" src="./Images/Img6.jpg" alt="food">
-            <img class="img5" src="./Images/Img5.jpg" alt="food">
+            <img class="img4" src="./Assets/img4.png" alt="food">
+            <img class="img6" src="./Assets/image 5.png" alt="food">
+            <img class="img5" src="./Assets/img6.png" alt="food">
         </div>
     </div>
     <button class="btn">Order Now</button>
