--- a/index.html
+++ b/index.html
@@ -31,23 +31,21 @@
     </div>
     <div class="food_title">
         <h1><span class="street">Street</span> <spa class="food">Food</spa></h1>
-        <img class="img2" src="./Assets/image 2.png" alt="food">
-        <img class="img3" src="./Assets/img3.png" alt="food">
-    </div>
-    <div class="food_info">
-        <div>
-            <h2>We don't play with food</h2>
-            <h5 class="text">When I was a small boy, my father told me never to recommend a church or a woman to 
+        <h2>We don't play with food</h2>
+         <h5 class="text">When I was a small boy, my father told me never to recommend a church or a woman to 
                 anyone. And I have found it wise never to recommend a restuarant either. Something
             always goes wrong with the cheese soufffle.
-        </h5>
-        </div>
-        <div class="img_container">
-            <img class="img4" src="./Assets/img4.png" alt="food">
-            <img class="img6" src="./Assets/image 5.png" alt="food">
-            <img class="img5" src="./Assets/img6.png" alt="food">
-        </div>
+         </h5>
+         <button class="btn">Order Now</button>
     </div>
-    <button class="btn">Order Now</button>
+    <div class="img_container1">
+        <img src="./Assets/image 2.png" alt="food">
+        <img src="./Assets/img3.png" alt="food">
+    </div>
+    <div class="img_container2">
+        <img src="./Assets/img4.png" alt="food">
+        <img src="./Assets/img6.png" alt="food">
+        <img src="./Assets/image 5.png" alt="food">
+    </div>
 </body>
 </html>
