Added an eating together section below the hero section

--- a/index.html
+++ b/index.html
@@ -47,5 +47,16 @@
         <img src="./Assets/img6.png" alt="food">
         <img src="./Assets/image 5.png" alt="food">
     </div>
+    <div class="eat_section">
+        <img src="./Assets/img10.png" alt="food">
+        <div class="div">
+            <h2>Eat together</h2>
+            <p>There is something profoundly satisfying about sharing
+                a meal.Eating together, breaking bread together, is one 
+                of the oldest and most fundamentally unifying of human
+                experiences
+            </p>
+        </div>
+    </div>
 </body>
 </html>
