Added contents in the eating together section

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <div class="circle"></div>
+    <section>
     <nav>
         <ul>
             <li><a href="#">Home</a></li>
@@ -47,6 +48,7 @@
         <img src="./Assets/img6.png" alt="food">
         <img src="./Assets/image 5.png" alt="food">
     </div>
+    </section>
     <div class="eat_section">
         <img src="./Assets/img10.png" alt="food">
         <div class="div">
