positined items in the section below the hero section through the css file

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <title>Street Food</title>
 </head>
 <body>
-    <div class="circle"></div>
     <section>
+        <div class="circle"></div>
     <nav>
         <ul>
             <li><a href="#">Home</a></li>
@@ -52,7 +52,7 @@
     <div class="eat_section">
         <img src="./Assets/img10.png" alt="food">
         <div class="div">
-            <h2>Eat together</h2>
+            <h2 class="eat">Eat together</h2>
             <p>There is something profoundly satisfying about sharing
                 a meal.Eating together, breaking bread together, is one 
                 of the oldest and most fundamentally unifying of human
