Added a menu title

--- a/index.html
+++ b/index.html
@@ -60,5 +60,8 @@
             </p>
         </div>
     </div>
+    <h3 class="menu">Explore Menu</h3>
+    <div class="menu_section">
+    </div>
 </body>
 </html>
