Added an image in the menu section after aligning the menu items

--- a/index.html
+++ b/index.html
@@ -62,6 +62,19 @@
     </div>
     <h3 class="menu">Explore Menu</h3>
     <div class="menu_section">
+        <div class="menu_item">
+            <img src="./Assets/img11.png" alt="burger">
+            <h4>Burger Name</h4>
+            <p>There is something profoundly satisfying about sharing a meal</p>
+        </div>
+        <div class="menu_item">
+            <h4>Burger Name</h4>
+            <p>There is something profoundly satisfying about sharing a meal</p>
+        </div>
+        <div class="menu_item">
+            <h4>Burger Name</h4>
+            <p>There is something profoundly satisfying about sharing a meal</p>
+        </div>
     </div>
 </body>
 </html>
