--- a/index.html
+++ b/index.html
@@ -60,21 +60,36 @@
             </p>
         </div>
     </div>
-    <h3 class="menu">Explore Menu</h3>
-    <div class="menu_section">
+    <div class="menu_container">
+        <h3 class="menu">Explore Menu</h3>
+    <div class="menu_section1">
         <div class="menu_item">
-            <img src="./Assets/img11.png" alt="burger">
             <h4>Burger Name</h4>
-            <p>There is something profoundly satisfying about sharing a meal</p>
+            <img src="./Assets/img11.png" alt="burger"><p>There is something profoundly satisfying about sharing a meal</p>
         </div>
         <div class="menu_item">
             <h4>Burger Name</h4>
-            <p>There is something profoundly satisfying about sharing a meal</p>
+            <img src="./Assets/img11.png" alt="burger"><p>There is something profoundly satisfying about sharing a meal</p>
         </div>
         <div class="menu_item">
             <h4>Burger Name</h4>
-            <p>There is something profoundly satisfying about sharing a meal</p>
+            <img src="./Assets/img11.png" alt="burger"><p>There is something profoundly satisfying about sharing a meal</p>
         </div>
+    </div>
+    <div class="menu_section1">
+        <div class="menu_item">
+            <h4>Burger Name</h4>
+            <img src="./Assets/img11.png" alt="burger"><p>There is something profoundly satisfying about sharing a meal</p>
+        </div>
+        <div class="menu_item">
+            <h4>Burger Name</h4>
+            <img src="./Assets/img11.png" alt="burger"><p>There is something profoundly satisfying about sharing a meal</p>
+        </div>
+        <div class="menu_item">
+            <h4>Burger Name</h4>
+            <img src="./Assets/img11.png" alt="burger"><p>There is something profoundly satisfying about sharing a meal</p>
+        </div>
+    </div>
     </div>
 </body>
 </html>
