Added a deals section in the HTML file

--- a/index.html
+++ b/index.html
@@ -91,5 +91,22 @@
         </div>
     </div>
     </div>
+    <div class="deals_container">
+        <h2>Hot Deals</h2>
+        <div class="deals_sub_container">
+          <div>
+            <img src="./Assets/img12.png" alt="drink"><img src="./Assets/img9.png" alt="burger">
+          </div>
+          <div>
+              <h1>SPECIAL COMBO PACK</h1>
+              <h3>Burger pizz</h3>
+              <h3>Fries & Drinks</h3>
+              <p>There is something profoundly satisfying about sharing a meal. Eating together
+                  ,breaking bread together,is one of the oldest and most fundamentally unifying 
+                  of human experiences.
+              </p>
+          </div>
+        </div>
+    </div>
 </body>
 </html>
