Aligned the items in the deals section through the css file

--- a/index.html
+++ b/index.html
@@ -92,12 +92,13 @@
     </div>
     </div>
     <div class="deals_container">
-        <h2>Hot Deals</h2>
+        <h2>Hot <span>Deals</span></h2>
         <div class="deals_sub_container">
-          <div>
-            <img src="./Assets/img12.png" alt="drink"><img src="./Assets/img9.png" alt="burger">
+          <div class="first">
+            <img class="first" src="./Assets/img12.png" alt="drink">
+            <img class="second" src="./Assets/img9.png" alt="burger">
           </div>
-          <div>
+          <div class="deals_info">
               <h1>SPECIAL COMBO PACK</h1>
               <h3>Burger pizz</h3>
               <h3>Fries & Drinks</h3>
