Made some minor changes in the css file

--- a/index.html
+++ b/index.html
@@ -92,14 +92,14 @@
     </div>
     </div>
     <div class="deals_container">
-        <h2>Hot <span>Deals</span></h2>
+        <h2>Hot <span class="hot">Deals</span></h2>
         <div class="deals_sub_container">
           <div class="first">
             <img class="first" src="./Assets/img12.png" alt="drink">
             <img class="second" src="./Assets/img9.png" alt="burger">
           </div>
           <div class="deals_info">
-              <h1>SPECIAL COMBO PACK</h1>
+              <h1 class="hot">SPECIAL COMBO PACK</h1>
               <h3>Burger pizz</h3>
               <h3>Fries & Drinks</h3>
               <p>There is something profoundly satisfying about sharing a meal. Eating together
