--- a/index.html
+++ b/index.html
@@ -109,5 +109,14 @@
           </div>
         </div>
     </div>
+    <div class="contact_container">
+        <h2>Contact <span class="hot">Us</span></h2>
+        <p>There is something profoundly satisfying about sharing a meal. Eating together
+            ,breaking bread together,is one of the oldest and most fundamentally unifying 
+            of human experiences.
+        </p>
+        <input type="email" placeholder="Email">
+        <button class="btn">Send</button>
+    </div>
 </body>
 </html>
