Added the footer section and included all its contents

--- a/index.html
+++ b/index.html
@@ -118,5 +118,27 @@
         <input type="email" placeholder="Email">
         <button class="btn">Send</button>
     </div>
+    <div class="footer_container">
+        <div class="foot1">
+            <p>Sunday - Thursday</p>
+            <small>4pm</small>
+        </div>
+        <div>
+            <p>(423) 266-1121</p>
+            <small>801 Chestnut Street |</small>
+            <small>Chattanooga TN 37402</small>
+        </div>
+        <div>
+            <p>Follow</p>
+            <small>GET THE LATEST NEWS SIGN UP 
+                FOR OUR NEWSLETERS
+            </small>
+            <small>@Website Design</small>
+        </div>
+        <div>
+            <i class="fa fa-instagram"></i>
+            <button>Send</button>
+        </div>
+    </div>
 </body>
 </html>
