--- a/index.html
+++ b/index.html
@@ -10,7 +10,17 @@
 </head>
 <body>
     <section>
-        <div class="circle"></div>
+        <div class="circle">
+            <div class="dotted">
+                <img src="./Assets/image 2.png" alt="food">
+                <img src="./Assets/img3.png" alt="food">
+                <img src="./Assets/img4.png" alt="food">
+                <img src="./Assets/img6.png" alt="food">
+                <img src="./Assets/image 5.png" alt="food">
+            </div>
+        </div>
+        
+
     <nav>
         <ul>
             <li><a href="#">Home</a></li>
@@ -27,9 +37,7 @@
     <div class="title">
         <h2>Street Food</h2>
     </div>
-    <div class="top_img">
-        <img class="img1" src="./Assets/img1.png" alt="food">
-    </div>
+    
     <div class="food_title">
         <h1><span class="street">Street</span> <spa class="food">Food</spa></h1>
         <h2>We don't play with food</h2>
@@ -39,7 +47,7 @@
          </h5>
          <button class="btn">Order Now</button>
     </div>
-    <div class="img_container1">
+    <!-- <div class="img_container1">
         <img src="./Assets/image 2.png" alt="food">
         <img src="./Assets/img3.png" alt="food">
     </div>
@@ -47,6 +55,9 @@
         <img src="./Assets/img4.png" alt="food">
         <img src="./Assets/img6.png" alt="food">
         <img src="./Assets/image 5.png" alt="food">
+    </div> -->
+    <div class="top_img">
+        <img class="img1" src="./Assets/img1.png" alt="food">
     </div>
     </section>
     <div class="eat_section">
