Made minor changes

--- a/index.html
+++ b/index.html
@@ -113,9 +113,9 @@
               <h1 class="hot">SPECIAL COMBO PACK</h1>
               <h3>Burger pizz</h3>
               <h3>Fries & Drinks</h3>
-              <p>There is something profoundly satisfying about sharing a meal. Eating together
-                  ,breaking bread together,is one of the oldest and most fundamentally unifying 
-                  of human experiences.
+              <p>There is something profoundly satisfying<br> about sharing a meal. Eating together<br>
+                  ,breaking bread together,is one of the<br> oldest and most fundamentally unifying 
+                  of<br> human experiences.
               </p>
           </div>
         </div>
