--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
         <img src="./Assets/img10.png" alt="food">
         <div class="div">
             <h2 class="eat">Eat together</h2>
-            <p>There is something profoundly satisfying about sharing
-                a meal.Eating together, breaking bread together, is one 
-                of the oldest and most fundamentally unifying of human
+            <p>There is something profoundly satisfying <br>about sharing
+                a meal.Eating together, breaking bread together,<br> is one 
+                of the<br> oldest and most fundamentally unifying of<br> human
                 experiences
             </p>
         </div>
